# ChangeLog for sci-mathematics/sage
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -files/ntl-9.3.0.patch, files/sage-6.8-exec.patch, sage-9999.ebuild:
  patch rebasing, bumping and expanding for 6.8.rc0 - also remove ntl-9.3.0
  patch now that it is useless and bumped pynac dependency.

  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Correct the dependency on pynac in 9999. See issue #360

  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -files/sage-6.8-noclean.patch, files/sage-6.8-sources-r1.patch,
  sage-9999.ebuild:
  consolidate a couple of patches. Properly install the needed source files.

  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/ntl-9.3.0.patch, files/sage-6.8-noclean.patch,
  files/sage-6.8-sources-r1.patch, sage-9999.ebuild:
  Bump to 6.8.beta8. It builds, it has to checked over for correctness so there
  may be further tunning.

  03 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Bumping dependency on {lib}gap in 6.8.beta7, not doing ipython before checking
  patches.

  03 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/sage-6.8-singular_extra_arg.patch, files/sage-6.8-blas-r1.patch,
  sage-9999.ebuild:
  patch bump for 6.8.beta7

  28 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-6.7-r1.ebuild, sage-9999.ebuild:
  Limit cython dependency to 0.22 releases in 6.7 and 9999, 0.22.1 is now going
  stable and will create trouble.

  26 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -files/sage-6.0-safepython.patch, -files/sage-6.0-sagedoc.patch,
  -files/sage-6.4-blas.patch:
  Removal of sage 6.5 for lack of ipython 2.4 which bothers repoman, patch clean
  up.

  26 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>